--- a/index.html
+++ b/index.html
@@ -4,19 +4,33 @@
     <link src<link rel="stylesheet" href="styles.css" />
   </head>
   <style>
-    .img {
+    .inner-frame {
       /* opacity: 0.75; */
     }
   </style>
   <body>
     <div class="frame">
+      <div class="img">
+        <img src="./image.jpg" alt="Zainab" />
+      </div>
       <div class="inner-frame">
         <div class="character">
           <div class="head">
             <div class="eyeright">
               <div class="toplid"></div>
               <div class="bottomlid"></div>
-              <div class="hair right bottomlashes"></div>
+              <div class="hair right bottomlashes">
+                <div class="strand s4"></div>
+                <div class="strand s6"></div>
+                <div class="strand s8"></div>
+                <div class="strand s10"></div>
+                <div class="strand s11"></div>
+                <div class="strand s12"></div>
+                <div class="strand s14"></div>
+                <div class="strand s15"></div>
+                <div class="strand s16"></div>
+                <div class="strand s18"></div>
+              </div>
               <div class="eye">
                 <div class="iris">
                   <div class="pupil"></div>
@@ -30,9 +44,6 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="img">
-        <img src="./image.jpg" alt="Zainab" />
       </div>
     </div>
   </body>
